--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cloud center layout",
   "main": "pages/index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
   },
   "homepage": "https://github.com/souluu/dajana#readme",
   "dependencies": {
-    "next": "^5.1.0",
+    "next": "^6.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   }
