--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/souluu/dajana#readme",
   "dependencies": {
-    "next": "^6.0.1",
+    "next": "^6.0.2",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "fela": "^6.1.7",
+    "fela-dom": "^7.0.7",
+    "fela-preset-web": "^8.0.5",
+    "react-fela": "^7.2.0"
   }
 }
