--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "next": "^6.0.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
